--- a/src/app.css
+++ b/src/app.css
@@ -8,6 +8,7 @@
   --background-rgb: 25, 25, 35;
   --foreground-rgb: 255, 255, 255;
   --primary-orange: 255, 121, 0;
+  --primary-red: 255, 0, 0;
   --secondary-yellow: 255, 217, 0;
   --accent-blue: 0, 195, 255;
   --accent-pink: 255, 0, 128;
@@ -21,9 +22,10 @@ body {
 }
 
 .neon-text {
-  text-shadow: 0 0 10px rgba(var(--primary-orange), 0.8),
-    0 0 20px rgba(var(--primary-orange), 0.8),
-    0 0 30px rgba(var(--primary-orange), 0.8);
+  text-shadow:
+    1px 1px 2px rgba(var(--primary-red), 0.8),
+    0 0 1em rgba(var(--accent-blue), 0.8),
+    0 0 0.2em rgba(var(--primary-red), 0.8);
 }
 
 .retro-future-box {
