--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Code+Latin:wght@100&family=Nova+Mono&family=Orbitron&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -12,16 +12,42 @@
   --secondary-yellow: 255, 217, 0;
   --accent-blue: 0, 195, 255;
   --accent-pink: 255, 0, 128;
-  font-family: 'Merriweather', serif;
+}
+
+.font-heading {
+  font-family: "Orbitron", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.font-subheading {
+  font-family: "Nova Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.font-code {
+  font-family: "M PLUS Code Latin", monospace;
+  font-weight: 100;
+  font-style: normal;
+  font-optical-sizing: auto;
+  font-variation-settings:
+    "wdth" 100;
 }
 
 body {
   background: rgb(var(--background-rgb));
   color: rgb(var(--foreground-rgb));
-  font-family: 'Merriweather', serif;
 }
 
 .neon-text {
+  text-shadow:
+    1px 1px 2px rgba(var(--primary-red), 0.8),
+    0 0 1em rgba(var(--accent-blue), 0.8),
+    0 0 0.2em rgba(var(--primary-red), 0.8);
+}
+
+.neon-text-blue {
   text-shadow:
     1px 1px 2px rgba(var(--primary-red), 0.8),
     0 0 1em rgba(var(--accent-blue), 0.8),
@@ -46,4 +72,13 @@ body {
 .button-primary:hover {
   background-color: rgb(var(--accent-pink));
   box-shadow: 0 0 15px rgba(var(--accent-pink), 0.8);
+}
+
+.code-block {
+  background-color: #282c34;
+  color: #abb2bf;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  overflow-x: auto;
+  display: block;
 }
